small fixes on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@
     font-size: 16px
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .cursor {
         display: none !important;
     }
@@ -75,3 +75,15 @@ h1 {
     100% {opacity: 1;}
 }
 
+html, body {
+    overscroll-behavior: none;
+}
+
+* {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; 
+}
